--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,15 @@
   background: #9575cd;
   color: floralwhite;
 }
+
+.footer {
+  background-color: #d1c4e9;
+  margin: 0px auto;
+  padding: 20px 0px 20px 0px;
+}
+
+.address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
+}
