--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,18 @@ body {
   background-color: #d1c4e9;
   color: white;
 }
+
+.carousel {
+  background: #512da8;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 300px;
+}
