--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,19 @@ body {
   left: 0;
   min-height: 300px;
 }
+
+.modal-header {
+  background: #512da8;
+  color: white;
+}
+
+.modal-header button.close {
+  color: #d1c4e9;
+}
+.button.close:hover {
+  background: #eeecf1;
+}
+
+.modal-body {
+  background: #d1c4e9;
+}
