--- a/css/styles.css
+++ b/css/styles.css
@@ -60,14 +60,12 @@ body {
   background: #512da8;
   color: white;
 }
-
-.modal-header button.close {
+.modal-header .close {
   color: #d1c4e9;
 }
-.button.close:hover {
+.modal-header .close:hover {
   background: #eeecf1;
 }
-
 .modal-body {
   background: #d1c4e9;
 }
